# android-bluetooth-serial-rs

./: Cargo.toml  README.md  lib.rs
