[package]
name = "android-bluetooth-serial"
version = "0.1.0"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[dependencies]
log = "0.4"
jni-min-helper = "0.2.5"

[lib]
name = "android_bluetooth_serial"
path = "lib.rs"
