[package]
name = "android-bluetooth-serial"
version = "0.1.0"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/android-bluetooth-serial-rs"
readme = "README.md"
description = "Android API wrapper handling Bluetooth classic RFCOMM/SPP connection."
keywords = ["bluetooth", "rfcomm", "spp", "android"]
categories = ["api-bindings", "hardware-support"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[package.metadata.docs.rs]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "x86_64-linux-android",
]

[dependencies]
log = "0.4"
jni-min-helper = { version = "0.2.6", features = ["no-proxy"] }

[lib]
name = "android_bluetooth_serial"
path = "lib.rs"
